# ImgGradient

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  image.cpp  image.h  main.cpp  rgbpixel.cpp  rgbpixel.h
